# _template

./: .gitignore  .pre-commit-config.yaml  .readmeignore  AGENTS.md  README.md  flake.nix  justfile  pyproject.toml  rumdl.toml  treefmt.nix
.claude/: README.md  settings.json
.claude/agents/: README.md  architect.md  reviewer.md  tester.md
.claude/commands/: README.md  status.md  verify.md
.claude/hooks/: README.md  pre-push-verify.sh
.codex/: AGENTS.md  README.md  hooks.json
.codex/hooks/: README.md  pre-push-verify.sh
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  feature_request.yml  task.yml
.github/rulesets/: team.json
.github/workflows/: README.md  ci.yml  devcontainer.yml  update-flake.yml
agent-workflow/: README.md
agent-workflow/agents/: README.md  architect.md  reviewer.md  tester.md
agent-workflow/commands/: README.md  manage.md  status.md  verify.md
agent-workflow/rules/: README.md  command-permissions.md  (+4 more)
docs/: README.md
scripts/: README.md  check-status  github-setup-rules  precommit  worktree-safety
src/: README.md
template/: README.md
template/parts/starter/web-api-rust/payload/: Cargo.toml
template/parts/starter/web-api-rust/payload/src/: main.rs
template/parts/starter/web-htmx-rust/payload/: Cargo.toml
template/parts/starter/web-htmx-rust/payload/src/: main.rs
template/parts/starter/web-htmx-rust/payload/templates/: index.html  layout.html
tests/: README.md
tooling/: README.md
(+387 files in other folders)
