[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
askama = "0.12"
askama_axum = "0.4"
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
